using Microsoft.AspNetCore.Hosting;
using Microsoft.Extensions.Configuration;
using Microsoft.Extensions.Hosting;
using Microsoft.Extensions.Logging;
using System;
using System.Collections.Generic;
using System.Linq;
using System.Threading.Tasks;

namespace wEBcMD
{
   /// <summary>
   /// The beginning of all
   /// </summary>
   public class Program
   {
      /// <summary>
      /// Main Method
      /// </summary>
      /// <param name="args"></param>
      public static void Main(string[] args)
      {
         CreateHostBuilder(args).Build().Run();
      }

      /// <summary>
      ///
      /// </summary>
      /// <param name="args"></param>
      /// <returns></returns>
      public static IHostBuilder CreateHostBuilder(string[] args) =>
          Host.CreateDefaultBuilder(args)
              .ConfigureWebHostDefaults(webBuilder =>
              {
                 webBuilder.UseStartup<Startup>();
              });
   }
}
